log/build_2024-11-07_06-29-32/my_image_subscriber/stderr.log
  File "/home/rokey/1_ws/src/install/my_image_subscriber/lib/python3.10/site-packages/my_image_subscriber/image_subscriber.py", line 178
    yield (b'--frame\r\n'
          ^
SyntaxError: '(' was never closed

